--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   permission_handler: ^8.1.4
   flutter_polyline_points: ^1.0.0
   dio: ^4.0.0
+  google_maps_webservice: ^0.0.16
+  http: ^0.13.6
+
 
 dev_dependencies:
   flutter_test:
