--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,10 +43,17 @@ dependencies:
   flutter_bloc: ^8.1.3
   shared_preferences: ^2.2.2
   flutter_localized_locales: ^2.0.5
+  firebase_core: ^2.24.2
+  firebase_auth: ^4.16.0
+  firebase_messaging: ^14.7.10
+  firebase_database: ^10.4.0
+  firebase_in_app_messaging: ^0.7.4+8
+  
 
   flutter_localizations:
     sdk: flutter
-
+  cloud_firestore: ^4.14.0
+    
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -67,13 +74,14 @@ flutter_icons:
 # following page: https://dart.dev/tools/pub/pubspec
 # The following section is specific to Flutter packages.
 flutter:
-
+  assets: 
+    - assets/
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
   # To add assets to your application, add an assets section, like this:
-assets: null
+
 flutter_intl:
   enabled: true
   class_name: S
